Fixed double appearance of the croppie frame

--- a/styles.css
+++ b/styles.css
@@ -135,6 +135,10 @@ body.dark #dropArea {
     margin-bottom: 16px;
 }
 
+.imageContainer .croppie-container ~ textarea {
+    display: none;
+}
+
 .imageElement{
     width: 200px;
     height: 400px;
